Include compiled TestingWidgetSet in war (#9299)